# phantombuster-lib

./: .env.example  .gitignore  API-guidence.md  EPHEMERAL-WORKFLOW.md  README.md  cqc-org-to-linkedin.md  pyproject.toml  requirements.txt
cqc/: __init__.py  client.py  syndication.yaml
examples/: batch_resolve_test.py  cqc_to_linkedin.py  ephemeral_workflow.py  linkedin_company_id.js  test_resolve.py
phantombuster/: __init__.py  client.py
resolver/: __init__.py  core.py  resolver_phantom.js
webapp/: __init__.py  app.py  clients.py  resolver.py
webapp/blueprints/: agents.py  containers.py  dashboard.py  resolve.py
webapp/templates/: agent_detail.html  agents.html  base.html  container.html  dashboard.html  error.html  macros.html  resolve.html
